--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,18 +7,21 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <form class="login-form" action="/login" method="POST">
+        <form class="login-form" action="/signup" method="POST">
             <div class="form-control">
-                <label for="email">E-mail
-                </label>
-                <input type="email" name="email" id="email" placeholder="enter your mail">
+                <label for="email">E-Mail</label>
+                <input type="email" name="email" id="email">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
+            <div class="form-control">
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" name="confirmPassword" id="confirmPassword">
+            </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Login</button>
+            <button class="btn" type="submit">Sign Up</button>
         </form>
     </main>
     <%- include('../includes/end.ejs') %>
